# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = [
    "hatchling==1.29.0",
    "packaging==26.1",
    "pathspec==1.0.4",
    "pluggy==1.6.0",
    "tomli==2.4.1; python_version < '3.11'",
    "trove-classifiers==2026.1.14.14",
]
build-backend = "hatchling.build"

[project]
name = "apache-airflow-registry-tools"
description = "Extraction and build tools for the Airflow Provider Registry"
version = "0.0.1"
requires-python = ">=3.10"
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["registry_tools"]

[tool.pytest.ini_options]
pythonpath = ["."]
