[build-system]
requires = ["flit_core >=3.8.0,<4"]
build-backend = "flit.buildapi"

[project]
name = "apache-airflow-providers-amazon"
version = "6.2.0"
authors = [
    {name = "Apache Airflow PMC", email = "dev@airflow.apache.org"},
]
maintainers = [
    {name = "Apache Airflow PMC", email = "dev@airflow.apache.org"},
]
description = "Provider for Apache Airflow. Implements apache-airflow-providers-amazon package"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["airflow", "airflow-provider", "apache-airflow-providers-amazon"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Monitoring",
]


dependencies = [
    "apache-airflow>=2.3.0",
    "apache-airflow-providers-common-sql>=1.3.1",
    "boto3>=1.24.0",
    "watchtower~=2.0.1",
    "jsonpath_ng>=1.5.3",
    "redshift_connector>=2.0.888",
    "sqlalchemy_redshift>=0.8.6",
    "pandas>=0.17.1",
    "mypy-boto3-rds>=1.24.0",
    "mypy-boto3-redshift-data>=1.24.0",
    "mypy-boto3-appflow>=1.24.0",
]

[project.urls]
"Documentation" = "https://airflow.apache.org/docs/apache-airflow-providers-amazon/6.2.0/"
"Bug Tracker" = "https://github.com/apache/airflow/issues"
"Source Code" = "https://github.com/apache/airflow"
"Slack Chat" = "https://s.apache.org/airflow-slack"
"Twitter" = "https://twitter.com/ApacheAirflow"
"YouTube" = "https://www.youtube.com/channel/UCSXwxpWZQ7XZ1WL3wqevChA/"

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow.providers.amazon.get_provider_info:get_provider_info"

[tool.flit.module]
name = "airflow.providers.amazon"